--- a/about.html
+++ b/about.html
@@ -13,14 +13,14 @@
                 <li><a href="index.html">Home</a></li> 
                 <li><a href="photos.html">Image Gallery</a></li>  
                 <li><a href="shop.html">Shop</a></li>
+                <li><a class="active">About</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>About</h1>
         <h2>Characters</h2>
-    <ul>
-        <p>
+        <ul>
             <li><a href="" target="_blank">Frodo Baggins</a></li>
             <li><a href="" target="_blank">Samwise Gamgee</a></li>
             <li><a href="" target="_blank">Gandalf the Grey</a></li>
@@ -33,8 +33,7 @@
             <li><a href="" target="_blank">Boromir</a></li>
             <li><a href="" target="_blank">Saruman</a></li>
             <li><a href="" target="_blank">Sauron</a></li>
-        </p>
-    </ul>
+        </ul>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
