--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <header>
             <nav>
                 <ul>
+                    <li><a class="active">Home</a></li>
                     <li><a href="photos.html">Image Gallery</a></li> 
                     <li><a href="shop.html">Shop</a></li>  
                     <li><a href="about.html">About</a></li>
