--- a/photos.html
+++ b/photos.html
@@ -10,7 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li> 
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active">Image Gallery</a></li> 
                 <li><a href="shop.html">Shop</a></li>  
                 <li><a href="about.html">About</a></li>
             </ul>
