--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li> 
-                <li><a href="photos.html"> Image Gallery</a></li>  
+                <li><a href="photos.html"> Image Gallery</a></li>
+                <li><a class="active">Shop</a></li>  
                 <li><a href="about.html">About</a></li>
             </ul>
         </nav>
