Muziekje home en gallerij proberen te fixen??

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         </header>
     <main>
         <h1>Home</h1>
-        <section>            
-            <div>
-                <img class="homescreen-image" src="images/king/shirebynight.png" alt="night has fallen over the shire">
-            </div>
+        <section>
+        <h2>  
+            <img class="homescreen-image" src="images/king/shirebynight.png" alt="night has fallen over the shire">  
+        </h2>   
         </section>
         <h2>Click here!</h2>
-        <audio><embed src="music/the_shire.mp3" loop="true" autostart="true"></audio>
+        <audio loop src="music/the_shire.mp3"></audio>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
