--- a/about.html
+++ b/about.html
@@ -19,21 +19,23 @@
     </header>
     <main>
         <h1>About</h1>
+        <section>
         <h2>Characters</h2>
         <ul>
-            <li><a href="" target="_blank">Frodo Baggins</a></li>
-            <li><a href="" target="_blank">Samwise Gamgee</a></li>
-            <li><a href="" target="_blank">Gandalf the Grey</a></li>
-            <li><a href="" target="_blank">Merry/Merriadoc Brandybuck</a></li>
-            <li><a href="" target="_blank">Pippin Took</a></li>
-            <li><a href="" target="_blank">Aragorn/Strider</a></li>
-            <li><a href="" target="_blank">Legolas Greenleaf</a></li>
-            <li><a href="" target="_blank">Gimli son of Gloin</a></li>
-            <li><a href="" target="_blank">Arwen</a></li>
-            <li><a href="" target="_blank">Boromir</a></li>
-            <li><a href="" target="_blank">Saruman</a></li>
-            <li><a href="" target="_blank">Sauron</a></li>
+            <li><a class="button" href="" target="_blank">Frodo Baggins</a></li>
+            <li><a class="button" href="" target="_blank">Samwise Gamgee</a></li>
+            <li><a class="button" href="" target="_blank">Gandalf the Grey</a></li>
+            <li><a class="button" href="" target="_blank">Merry/Merriadoc Brandybuck</a></li>
+            <li><a class="button" href="" target="_blank">Pippin Took</a></li>
+            <li><a class="button" href="" target="_blank">Aragorn/Strider</a></li>
+            <li><a class="button" href="" target="_blank">Legolas Greenleaf</a></li>
+            <li><a class="button" href="" target="_blank">Gimli son of Gloin</a></li>
+            <li><a class="button" href="" target="_blank">Arwen</a></li>
+            <li><a class="button" href="" target="_blank">Boromir</a></li>
+            <li><a class="button" href="" target="_blank">Saruman</a></li>
+            <li><a class="button" href="" target="_blank">Sauron</a></li>
         </ul>
+        </section>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
