--- a/photos.html
+++ b/photos.html
@@ -21,12 +21,12 @@
         <h1>Image Gallery</h1>
     <section>
         <h2>Fellowship of the ring</h2>
-            <img src="images/fellowship/mysteryring.png" alt="ring in the water" width="700">
-            <img src="images/fellowship/travelduo.png" alt="silhouettes on the horizon" width="700" >
-            <img src="images/fellowship/saruman_orb.png" alt="evil wizard pondering" width="700">
-            <img src="images/fellowship/frodo_sam.png" alt="frodo and sam" width="700">
-            <img src="images/fellowship/map.png" alt="old map" width="700">
-            <img src="images/fellowship/thering.png" alt="frodo holding out ring" width="700">
+            <img src="images/fellowship/mysteryring.png" class="image" alt="ring in the water" height="350" width="700">
+            <img src="images/fellowship/travelduo.png" class="image" alt="silhouettes on the horizon" height="350" width="700" >
+            <img src="images/fellowship/saruman_orb.png" class="image" alt="evil wizard pondering" height="350" width="700">
+            <img src="images/fellowship/frodo_sam.png" class="image" alt="frodo and sam" height="350" width="700">
+            <img src="images/fellowship/map.png" class="image" alt="old map" height="350" height="350" width="700">
+            <img src="images/fellowship/thering.png" class="image" alt="frodo holding out ring" height="350" width="700">
     </section>
 <br>
     <section>
