--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h2>   
         </section>
         <h2>Click here!</h2>
-        <audio loop src="music/the_shire.mp3"></audio>
+        <audio src="music/the_shire.mp3"></audio>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
