--- a/shop.html
+++ b/shop.html
@@ -19,18 +19,23 @@
     </header>
     <main>
         <h1>Webshop</h1>
-        <h3>klik op de smiley voor een portfolio</h3>
-        <p>ik haat mezelf <a href="https://samthasing42.wixsite.com/portfolio" target="_blank"> :) </a></p>
-        
-        <!-- Damn this might be the end of me -->
-
-        <h3>Top 3 Hobbits</h3>
-        <img src="images/cheeckyfrodo.jpeg" alt="photo cheeky frodo">
-        <ol>
-            <li>Pippin</li> 
-            <li>Sam</li>  
-            <li>Lobelia Sack-Ville Baggins</li>
-        </ol>
+        <section>
+            <div>
+                <h3>Doormat</h3>
+                <img class="merch" src="images/merch/doormat.png">
+                <p>A super cool doormat, a real woman magnet. Made for getting the shit of your boots after a long day of walking through middle earth.</p> 
+            </div>
+            <div>
+                <h3>Phone Case</h3>
+                <img class="merch" src="images/merch/case.png">
+                <p>Everyone in Middle-Earth has a smartphone! And you know what is even better than a potion that boosts you fighting spirit? Yes! thats right, a sturdy phone case that's got your back whilst you are fighting the Uruks.</p> 
+            </div>
+            <div>
+                <h3>Poster</h3>
+                <img class="merch" src="images/merch/poster.png">
+                <p>The prancing pony has one, the white counsel has one, there is even one in Bag-End! Get your beautiful Lord of The Rings poster now!</p> 
+            </div>
+        </section>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
