--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Home</h1>
         <section>
         <h2>  
-            <img class="homescreen-image" src="images/king/shirebynight.png" alt="night has fallen over the shire">  
+            <img class="homescreen-image" src="images/king/shirebynight.jpeg" alt="night has fallen over the shire" width="700">  
         </h2>   
         </section>
         <h2>Click here!</h2>
