--- a/photos.html
+++ b/photos.html
@@ -21,30 +21,30 @@
         <h1>Image Gallery</h1>
     <section>
         <h2>Fellowship of the ring</h2>
-            <img src="images/fellowship/mysteryring.png" class="image" alt="ring in the water" height="350" width="700">
-            <img src="images/fellowship/travelduo.png" class="image" alt="silhouettes on the horizon" height="350" width="700" >
-            <img src="images/fellowship/saruman_orb.png" class="image" alt="evil wizard pondering" height="350" width="700">
-            <img src="images/fellowship/frodo_sam.png" class="image" alt="frodo and sam" height="350" width="700">
-            <img src="images/fellowship/map.png" class="image" alt="old map" height="350" height="350" width="700">
-            <img src="images/fellowship/thering.png" class="image" alt="frodo holding out ring" height="350" width="700">
+            <img src="images/fellowship/mysteryring.jpeg" class="image" alt="ring in the water" height="350" width="700">
+            <img src="images/fellowship/travelduo.jpeg" class="image" alt="silhouettes on the horizon" height="350" width="700" >
+            <img src="images/fellowship/saruman_orb.jpeg" class="image" alt="evil wizard pondering" height="350" width="700">
+            <img src="images/fellowship/frodo_sam.jpeg" class="image" alt="frodo and sam" height="350" width="700">
+            <img src="images/fellowship/map.jpeg" class="image" alt="old map" height="350" height="350" width="700">
+            <img src="images/fellowship/thering.jpeg" class="image" alt="frodo holding out ring" height="350" width="700">
     </section>
 <br>
     <section>
         <h2>The Two Towers</h2>
-            <img src="images/towers/merrynpippin.png" alt="merry and pippin" width="700">
-            <img src="images/towers/aragornngandalf.png" alt="aragorn and gandalf" width="700">
-            <img src="images/towers/legolas.png" alt="the elf legolas" width="700">
-            <img src="images/towers/helmsdeep.png" alt="the battle for helms deep" width="700">
+            <img src="images/towers/merrynpippin.jpeg" alt="merry and pippin" width="700">
+            <img src="images/towers/aragornngandalf.jpeg" alt="aragorn and gandalf" width="700">
+            <img src="images/towers/legolas.jpeg" alt="the elf legolas" width="700">
+            <img src="images/towers/helmsdeep.jpeg" alt="the battle for helms deep" width="700">
     </section>
 <br>
     <section>
         <h2>Return Of The King</h2>
-            <img src="images/king/gimli.png" alt="gimli the dwarf laughing" width="700">
-            <img src="images/king/galadriel.png" alt="galadriel" width="700">
-            <img src="images/king/shirebyday.png" alt="sunny day in the shire" width="700">
-            <img src="images/king/eowyn.png" alt="eowyn mourning" width="700">
-            <img src="images/king/evilgate.png" alt="evil gates with green lighting" width="700">
-            <img src="images/king/mountdoom.png" alt="fiery mountain with lava" width="700">
+            <img src="images/king/gimli.jpeg" alt="gimli the dwarf laughing" width="700">
+            <img src="images/king/galadriel.jpeg" alt="galadriel" width="700">
+            <img src="images/king/rivendel.jpeg" alt="A gloomy Rivendel" width="700">
+            <img src="images/king/eowyn.jpeg" alt="eowyn saying her goodbye to a fallen friend" width="700">
+            <img src="images/king/evilgate.jpeg" alt="evil gates with green lighting" width="700">
+            <img src="images/king/mountdoom.jpeg" alt="fiery mountain with lava" width="700">
     </section>
 
     </main>
