--- a/about.html
+++ b/about.html
@@ -19,106 +19,105 @@
     </header>
     <main>
         <h1>About</h1>
-        <section>
         <h2>Characters</h2>
-        <div>
-            <a class="button" href="images/characters/frodo.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/frodo.jpeg" sizes="50%" alt="Frodo Baggins, the hobbit, holding sword">
+        <section>
+            <a href="images/characters/frodo.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/frodo.jpeg" sizes="50%" alt="Frodo Baggins, the hobbit, holding sword">
             <p>Frodo Baggins, son of Drogo Baggins, was a hobbit of the Shire in the late Third Age. 
                 He is commonly considered Tolkien's most renowned character for his leading role in the Quest of the Ring, in which he bore the One Ring to Mount Doom, where it was destroyed. 
                 He was a Ring-bearer, best friend to his gardener, Samwise Gamgee, and was one of three hobbits who sailed from 
                 Middle-earth to the Uttermost West at the end of the Third Age.</p>
-        </div>
-        <div>
-            <a class="button" href="images/characters/gandalf.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/gandalf.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+        </section>
+        <section>
+            <a href="images/characters/gandalf.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/gandalf.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Gandalf, known temporarily as the Grey and later the White, and originally named Olórin (Quenya), 
                 was an Istar (Wizard), dispatched to Middle-earth in the Third Age to combat the threat of Sauron. 
                 He joined Thorin II Oakenshield and his company to reclaim the Lonely Mountain from Smaug, helped form the Fellowship of the Ring to destroy the One Ring, and led the 
                 Free Peoples in the final campaign of the War of the Ring.</p>
-        </div> 
-        <div>
-            <a class="button" href="images/characters/aragorn.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/aragorn.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+        </section>
+        <section>
+            <a href="images/characters/aragorn.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/aragorn.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Aragorn II, son of Arathorn II and Gilraen, also known as Strider and Elessar, 
                 He was a great ranger and warrior, and bore, as Isildur's heir, the shards of Narsil, reforged and renamed 
                 Andúril Flame of the West in the War of the Ring.</p>
-        </div>
-        <div>
-            <a class="button"  href="images/characters/samwise.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/samwise.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+        </section>
+        <section>
+            <a href="images/characters/samwise.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/samwise.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Samwise Gamgee, known as Sam, was a hobbit of the Shire. He was Frodo Baggins' gardener and best friend. Sam proved himself to be Frodo's closest and most dependable companion, the most loyal of the Fellowship of the Ring, and played a critical role in protecting Frodo and destroying the One Ring.</p>  
-        </div>
-        <div>
-            <a class="button" href="images/characters/galadriel.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/galadriel.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+        </section>
+        <section>
+            <a href="images/characters/galadriel.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/galadriel.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Galadriel was the Lady of the woods of Lothlórien, which she ruled with Celeborn, her husband. 
                 One of the greatest Elves in Middle-earth, she surpassed nearly all others in beauty, knowledge, and power. 
                 She bore Nenya, one of the three Elven rings of power. J.R.R. Tolkien deemed her as one of the mightiest and fairest of all Elves remaining in Middle-earth in the Third Age. 
                 She was the only daughter and youngest child of Finarfin, prince of the Ñoldor, and Eärwen, whose cousin was Lúthien. Her elder brothers were Finrod Felagund, Orodreth, Angrod, and Aegnor. 
                 Galadriel was a niece of Fëanor, the most important Elf of the early First Age.</p>  
-        </div>
-        <div>
-            <a class="button" href="images/characters/smeagol.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/smeagol.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+        </section>
+        <section>
+            <a href="images/characters/smeagol.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/smeagol.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>By possessing the One Ring, his life extended centuries beyond his nature, and he became deformed and twisted in body and mind by the corruption of the Ring. 
                 He pursued the Ring for many years after Bilbo Baggins found it in Gollum's cave, within the Misty Mountains, and took it away. Inadvertently, Gollum would play a vital role in the ultimate 
                 Quest of the Ring. The name Gollum was derived from the sound of his gurgling, choking cough.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Merry & Pippin</h2>
-            <a class="button" href="images/characters/merrynpippin.png" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/merrynpippin.png" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <a href="images/characters/merrynpippin.png" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/merrynpippin.png" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Merry Brandybuck was a Hobbit of the Shire and one of Frodo Baggins cousins and closest friends. 
                 He loved boats and ponies and had a great interest in the maps of Middle-earth. 
                 He was also one of the nine companions of the Fellowship of the Ring. </p>  
             <p>Peregrin Took, more commonly known as Pippin, was a hobbit of the the Shire, and one of Frodo Baggins' youngest and closest friends. 
                 He was a member of the Fellowship of the Ring and, after the War of the Ring, became thirty-second Thain of the Shire.</p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Éowyn</h2>
-            <a class="button" href="images/characters/eowyn.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/eowyn.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <a href="images/characters/eowyn.jpeg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/eowyn.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Éowyn was a shieldmaiden of Rohan, daughter of Éomund and Théodwyn, younger sister of Éomer and niece of King Théoden.</p>  
-        </div>
+        </section>
         <div>
             <h2>Legolas</h2>
             <a href="images/characters/legolas.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/legolas.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <img src="images/characters/legolas.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Legolas was a Sindar Elf who joined the Fellowship of the Ring in the Third Age. Son of the Elvenking Thranduil of Mirkwood, Legolas was Mirkwood's prince, a messenger, and a master archer. 
                 With his keen eyesight, sensitive hearing, and excellent bowmanship, Legolas was valuable to the Fellowship in their journey across Middle-earth. 
                 He was well-known for becoming friends with the Dwarf Gimli, despite their long-held differences.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Gimli, son of Glóin</h2>
             <a href="images/characters/gimli.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/gimli.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <img src="images/characters/gimli.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Gimli, son of Glóin, was a Dwarf of the House of Durin and a member of the Fellowship of the Ring. 
                 Unlike other Dwarves, he readily fought alongside Elves in 
                 the War of the Ring against Sauron at the end of the Third Age.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Théoden</h2>
             <a href="images/characters/theoden.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/theoden.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <img src="images/characters/theoden.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Théoden, son of Thengel and Morwen Steelsheen, was the seventeenth King of Rohan, 
                 last of the Second Line of the royal House of Eorl.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Arwen</h2>
             <a href="images/characters/arwen.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/arwen.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <img src="images/characters/arwen.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Arwen was the Half-elven daughter of Elrond and Celebrían. 
                 She was often called Arwen Undómiel or Evenstar</p> 
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Elrond</h2>
             <a href="images/characters/elrond.jpeg" target="_blank">Get a closer look</a></li>
-            <img class="character" src="images/characters/elrond.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
+            <img src="images/characters/elrond.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Elrond Sindarin: Star-dome Half-elf, Lord of Rivendell, was a mighty Elf-ruler of old who dwelt in Middle-earth from 
                 the First Age to the beginning of the Fourth Age. He was the father of Elladan and Elrohir and Arwen Undómiel, the eventual wife of Aragorn II Elessar.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Saruman</h2>
             <a href="images/characters/saruman.jpeg" target="_blank">Get a closer look</a></li>
             <img class="character" src="images/characters/saruman.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
@@ -128,30 +127,28 @@
                 Having betrayed the Council and Free Peoples of the World, the White Wizard believed he could usurp his master's place as ruler of 
                 Middle-earth, or at least become the true power behind his throne. During the Great War of the Ring, Saruman marshalled an army at 
                 Isengard to both conquer Rohan on Sauron's behalf and try to seize the One Ring first without his knowledge.</p>  
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Sauron</h2>
             <a href="images/characters/sauron.jpeg" target="_blank">Get a closer look</a></li>                <img class="character" src="images/characters/sauron.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Sauron Quenya, the eponymous Lord of the Rings, was the greatest subversive Maia, maker of the One Ring, 
                 renowned disciple of the Vala Aulë, and chief agent of Morgoth in the Elder Days. After Morgoth's ousting by the Valar, 
                 Sauron became the second Dark Lord and sought to conquer Middle-earth, and even Númenor, through guileful trickery, with the Rings of Power or with overwhelming legions.</p>  
-        </div> 
-        <div>
+        </section> 
+        <section>
             <h2>Boromir</h2>
             <a href="images/characters/boromir.jpeg" target="_blank">Get a closer look</a></li>
             <img class="character" src="images/characters/boromir.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Boromir was a valiant warrior of Gondor, renowned for his prowess in combat and skill on the battlefield. 
                 He was the eldest son of Denethor II, who was Steward of Gondor during the War of the Ring, and his wife Finduilas. 
                 Even the people of Rohan admired him, particularly Éomer. He was the older brother of Faramir.</p>            
-        </div> 
-        <div>
+        </section>
+        <section>
             <h2>Faramir</h2>
             <a href="images/characters/faramir.jpeg" target="_blank">Get a closer look</a></li>
             <img class="character" src="images/characters/faramir.jpeg" sizes="50%" alt="A wizard, gandalf with a pointy hat">
             <p>Faramir was the second son of Denethor II and younger brother of Boromir. 
                 He was Captain of the Rangers of Ithilien and Captain of the White Tower.</p>            
-        </div> 
-        </div>
         </section>
     </main>
     <footer>
