--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <h1>Image Gallery</h1>
-    <section>
+    <section class="image">
         <h2>Fellowship of the ring</h2>
             <img src="images/fellowship/mysteryring.jpeg" class="image" alt="ring in the water" height="350" width="700">
             <img src="images/fellowship/travelduo.jpeg" class="image" alt="silhouettes on the horizon" height="350" width="700" >
@@ -28,14 +28,14 @@
             <img src="images/fellowship/map.jpeg" class="image" alt="old map" height="350" height="350" width="700">
             <img src="images/fellowship/thering.jpeg" class="image" alt="frodo holding out ring" height="350" width="700">
     </section>
-    <section>
+    <section class="image">
         <h2>The Two Towers</h2>
             <img src="images/towers/merrynpippin.jpeg" alt="merry and pippin" width="700">
             <img src="images/towers/aragornngandalf.jpeg" alt="aragorn and gandalf" width="700">
             <img src="images/towers/legolas.jpeg" alt="the elf legolas" width="700">
             <img src="images/towers/helmsdeep.jpeg" alt="the battle for helms deep" width="700">
     </section>
-    <section>
+    <section class="image">
         <h2>Return Of The King</h2>
             <img src="images/king/gimli.jpeg" alt="gimli the dwarf laughing" width="700">
             <img src="images/king/galadriel.jpeg" alt="galadriel" width="700">
