--- a/photos.html
+++ b/photos.html
@@ -19,30 +19,36 @@
     </header>
     <main>
         <h1>Image Gallery</h1>
+        <section>
+            <h2>Fellowship of the ring</h2>
+        </section>
     <section class="image">
-        <h2>Fellowship of the ring</h2>
-            <img src="images/fellowship/mysteryring.jpeg" class="image" alt="ring in the water" height="350" width="700">
-            <img src="images/fellowship/travelduo.jpeg" class="image" alt="silhouettes on the horizon" height="350" width="700" >
-            <img src="images/fellowship/saruman_orb.jpeg" class="image" alt="evil wizard pondering" height="350" width="700">
-            <img src="images/fellowship/frodo_sam.jpeg" class="image" alt="frodo and sam" height="350" width="700">
-            <img src="images/fellowship/map.jpeg" class="image" alt="old map" height="350" height="350" width="700">
-            <img src="images/fellowship/thering.jpeg" class="image" alt="frodo holding out ring" height="350" width="700">
+        <img src="images/fellowship/mysteryring.jpg" alt="ring in the water">
+        <img src="images/fellowship/travelduo.jpg" alt="silhouettes on the horizon">
+        <img src="images/fellowship/saruman_orb.jpg" alt="evil wizard pondering">
+        <img src="images/fellowship/frodo_sam.jpg" alt="frodo and sam">
+        <img src="images/fellowship/map.jpg" alt="old map">
+        <img src="images/fellowship/thering.jpg"alt="frodo holding out ring">
     </section>
-    <section class="image">
+    <section>
         <h2>The Two Towers</h2>
-            <img src="images/towers/merrynpippin.jpeg" alt="merry and pippin" width="700">
-            <img src="images/towers/aragornngandalf.jpeg" alt="aragorn and gandalf" width="700">
-            <img src="images/towers/legolas.jpeg" alt="the elf legolas" width="700">
-            <img src="images/towers/helmsdeep.jpeg" alt="the battle for helms deep" width="700">
     </section>
     <section class="image">
+        <img src="images/towers/merrynpippin.jpg" alt="merry and pippin">
+        <img src="images/towers/aragornngandalf.jpg" alt="aragorn and gandalf">
+        <img src="images/towers/legolas.jpg" alt="the elf legolas">
+        <img src="images/towers/helmsdeep.jpg" alt="the battle for helms deep">
+    </section>
+    <section>
         <h2>Return Of The King</h2>
-            <img src="images/king/gimli.jpeg" alt="gimli the dwarf laughing" width="700">
-            <img src="images/king/galadriel.jpeg" alt="galadriel" width="700">
-            <img src="images/king/rivendel.jpeg" alt="A gloomy Rivendel" width="700">
-            <img src="images/king/eowyn.jpeg" alt="eowyn saying her goodbye to a fallen friend" width="700">
-            <img src="images/king/evilgate.jpeg" alt="evil gates with green lighting" width="700">
-            <img src="images/king/mountdoom.jpeg" alt="fiery mountain with lava" width="700">
+    </section>
+    <section class="image">    
+        <img src="images/king/gimli.jpg" alt="gimli the dwarf laughing">
+        <img src="images/king/galadriel.jpg" alt="galadriel">
+        <img src="images/king/rivendel.jpg" alt="A gloomy Rivendel">
+        <img src="images/king/eowyn.jpg" alt="eowyn saying her goodbye to a fallen friend">
+        <img src="images/king/evilgate.jpg" alt="evil gates with green lighting">
+        <img src="images/king/mountdoom.jpg" alt="fiery mountain with lava">
     </section>
     </main>
     <footer>
