--- a/shop.html
+++ b/shop.html
@@ -21,13 +21,13 @@
         <h1>Webshop</h1>
         <section>
                 <h3>Doormat</h3>
-                <img class="merch" src="images/merch/doormat.png" width="700">
+                <img src="images/merch/doormat.png" width="700">
                 <p>A super cool doormat, a real woman magnet. Made for getting the shit of your boots after a long day of walking through middle earth.</p> 
                 <h3>Phone Case</h3>
-                <img class="merch" src="images/merch/case.png">
+                <img src="images/merch/case.png">
                 <p>Everyone in Middle-Earth has a smartphone! And you know what is even better than a potion that boosts you fighting spirit? Yes! thats right, a sturdy phone case that's got your back whilst you are fighting the Uruks.</p> 
                 <h3>Poster</h3>
-                <img class="merch" src="images/merch/poster.png">
+                <img src="images/merch/poster.png">
                 <p>The prancing pony has one, the white counsel has one, there is even one in Bag-End! Get your beautiful Lord of The Rings poster now!</p> 
         </section>
     </main>
