--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <h1>Home</h1>
         <section>
         <h2>  
-            <img class="homescreen-image" src="images/king/shirebynight.jpeg" alt="night has fallen over the shire" width="700">  
+            <img class="homescreen-image" src="images/king/shirebynight.jpg" alt="night has fallen over the shire" width="700">  
         </h2>   
         </section>
-        <h2>Click here!</h2>
-        <audio src="music/the_shire.mp3"></audio>
+        <h2><a href="https://youtu.be/dQw4w9WgXcQ?si=jooM4JxKJk-wUj5I">Click Here for more Lord of The Rings facts!</a></h2>
+        <audio autoplay="true" src="music/the_shire.mp3"></audio>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
