--- a/photos.html
+++ b/photos.html
@@ -19,36 +19,31 @@
     </header>
     <main>
         <h1>Image Gallery</h1>
-        <section>
-            <h2>Fellowship of the ring</h2>
-        </section>
-    <section class="image">
-        <img src="images/fellowship/mysteryring.jpg" alt="ring in the water">
-        <img src="images/fellowship/travelduo.jpg" alt="silhouettes on the horizon">
-        <img src="images/fellowship/saruman_orb.jpg" alt="evil wizard pondering">
-        <img src="images/fellowship/frodo_sam.jpg" alt="frodo and sam">
-        <img src="images/fellowship/map.jpg" alt="old map">
-        <img src="images/fellowship/thering.jpg"alt="frodo holding out ring">
+    <section>
+        <h2>Fellowship Of the Ring</h2>
+        <img class="image" src="images/fellowship/mysteryring.jpg" alt="ring in the water">
+        <img class="image" src="images/fellowship/travelduo.jpg" alt="silhouettes on the horizon">
+        <img class="image" src="images/fellowship/saruman_orb.jpg" alt="evil wizard pondering">
+        <img class="image" src="images/fellowship/frodo_sam.jpg" alt="frodo and sam">
+        <img class="image" src="images/fellowship/map.jpg" alt="old map of the Misty Mountains">
+        <img class="image" src="images/fellowship/thering.jpg"alt="frodo holding out ring">
     </section>
     <section>
-        <h2>The Two Towers</h2>
-    </section>
-    <section class="image">
-        <img src="images/towers/merrynpippin.jpg" alt="merry and pippin">
-        <img src="images/towers/aragornngandalf.jpg" alt="aragorn and gandalf">
-        <img src="images/towers/legolas.jpg" alt="the elf legolas">
-        <img src="images/towers/helmsdeep.jpg" alt="the battle for helms deep">
+    <h2>Two Towers</h2>
+        <img class="image" src="images/towers/merrynpippin.jpg" alt="merry and pippin">
+        <img class="image" src="images/towers/aragornngandalf.jpg" alt="aragorn and gandalf">
+        <img class="image" src="images/towers/legolas.jpg" alt="the elf legolas">
+        <img class="image" src="images/towers/uruk.jpg" alt="evil uruk reday for battle">
+        <img class="image" src="images/towers/helmsdeep.jpg" alt="the battle for helms deep">
     </section>
     <section>
-        <h2>Return Of The King</h2>
-    </section>
-    <section class="image">    
-        <img src="images/king/gimli.jpg" alt="gimli the dwarf laughing">
-        <img src="images/king/galadriel.jpg" alt="galadriel">
-        <img src="images/king/rivendel.jpg" alt="A gloomy Rivendel">
-        <img src="images/king/eowyn.jpg" alt="eowyn saying her goodbye to a fallen friend">
-        <img src="images/king/evilgate.jpg" alt="evil gates with green lighting">
-        <img src="images/king/mountdoom.jpg" alt="fiery mountain with lava">
+        <h2>Return of the King</h2>   
+        <img class="image" src="images/king/gimli.jpg" alt="gimli the dwarf laughing">
+        <img class="image" src="images/king/galadriel.jpg" alt="galadriel">
+        <img class="image" src="images/king/rivendel.jpg" alt="A gloomy Rivendel">
+        <img class="image" src="images/king/eowyn.jpg" alt="eowyn saying her goodbye to a fallen friend">
+        <img class="image" src="images/king/evilgate.jpg" alt="evil gates with green lighting">
+        <img class="image" src="images/king/mountdoom.jpg" alt="fiery mountain with lava">
     </section>
     </main>
     <footer>
