--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <h1>Home</h1>
         <section>
         <h2>  
-            <img class="homescreen-image" src="images/king/shirebynight.jpg" alt="night has fallen over the shire" width="700">  
+            <img class="homescreenimage" src="images/ring_animation.gif" alt="golden ring">  
         </h2>   
         </section>
         <h2><a href="https://youtu.be/dQw4w9WgXcQ?si=jooM4JxKJk-wUj5I">Click Here for more Lord of The Rings facts!</a></h2>
@@ -30,6 +30,7 @@
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
         <p>All images from <a href="https://film-grab.com/" target="_blank">FILMGRAB.com</a></p>
+        <p>Ring animation from <a href="https://phoneky.com/gif-animations/?id=s2s66391" target="_blank">Phoneky</a></p>
     </footer> 
 </body>
 </html>
