--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li> 
-                <li><a href="photos.html"> Image Gallery</a></li>
+                <li><a href="photos.html">Image Gallery</a></li>
                 <li><a class="active">Shop</a></li>  
                 <li><a href="about.html">About</a></li>
             </ul>
@@ -23,16 +23,25 @@
             <h3>Doormat</h3>
                 <img class="image" src="images/merch/doormat.png">
                 <p>A super cool doormat, a real woman magnet. Made for getting the 
-                    shit of your boots after a long day of walking through middle earth.</p>
+                    shit of your boots after a long day of walking through middle earth.
+                    <a href="https://amzn.eu/d/52XWdXl" target="_blank">Buy it Here!</a></p>
+        </section>
+        <section>
             <h3>Phone Case</h3>
-                <img src="images/merch/case.png">
+                <img class="image" src="images/merch/phonecase.png">
                 <p>Everyone in Middle-Earth has a smartphone! And you know what is 
                     even better than a potion that boosts you fighting spirit? Yes! thats right, 
-                    a sturdy phone case that's got your back whilst you are fighting the Uruks.</p>
+                    a sturdy phone case that's got your back whilst you are fighting the Uruks.
+                    <a href="https://rhinoshield.eu/collections/collab-the-lord-of-the-rings?device=iphone-14&prod=iphone-14-solidsuit-classic-su06&type=solidsuit-classic&bcolor=black&ctype=solidsuit-classic-magsafe&page=0&dcolor=CloudWhite" 
+                    target="_blank">Buy it Here!</a></p>
+        </section>
+        <section>
             <h3>Poster</h3>
-                <img src="images/merch/poster.png">
+                <img class="image" src="images/merch/poster.png">
                 <p>The prancing pony has one, the white counsel has one, there is even one in Bag-End! 
-                    Get your beautiful signed Lord of The Rings poster now!</p>
+                    Get your beautiful signed Lord of The Rings poster now!
+                    <a href="https://www.ebay.com/itm/325276574945?mkcid=16&mkevt=1&mkrid=711-127632-2357-0&ssspo=JWko-29ISwm&sssrc=2047675&ssuid=&widget_ver=artemis&media=COPY" 
+                    target="_blank">Buy it Here!</a></p>
         </section>
     </main>
     <footer>
