--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <h1>About</h1>
         <h2>Characters</h2>
         <section>
+            <h3>Frodo</h3>
             <a class="button" href="images/characters/frodo.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/frodo.jpeg" alt="Frodo Baggins, the hobbit, holding sword">
             <p>Frodo Baggins, son of Drogo Baggins, was a hobbit of the Shire in the late Third Age. 
@@ -29,7 +30,8 @@
                 Middle-earth to the Uttermost West at the end of the Third Age.</p>
         </section>
         <section>
-            <a href="images/characters/gandalf.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Gandalf</h3>
+            <a class="button" href="images/characters/gandalf.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/gandalf.jpeg" alt="A wizard, gandalf with a pointy hat">
             <p>Gandalf, known temporarily as the Grey and later the White, and originally named Olórin (Quenya), 
                 was an Istar (Wizard), dispatched to Middle-earth in the Third Age to combat the threat of Sauron. 
@@ -37,20 +39,23 @@
                 Free Peoples in the final campaign of the War of the Ring.</p>
         </section>
         <section>
-            <a href="images/characters/aragorn.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Aragorn</h3>
+            <a class="button" href="images/characters/aragorn.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/aragorn.jpeg" alt="The ranger Aragorn in the dark">
             <p>Aragorn II, son of Arathorn II and Gilraen, also known as Strider and Elessar, 
                 He was a great ranger and warrior, and bore, as Isildur's heir, the shards of Narsil, reforged and renamed 
                 Andúril Flame of the West in the War of the Ring.</p>
         </section>
         <section>
-            <a href="images/characters/samwise.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Sam</h3>
+            <a class="button" href="images/characters/samwise.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/samwise.jpeg" alt="Samwise in the deepest part of Mordor">
             <p>Samwise Gamgee, known as Sam, was a hobbit of the Shire. He was Frodo Baggins' gardener and best friend. Sam proved himself to be Frodo's closest and most dependable companion, the most loyal of the 
                 Fellowship of the Ring, and played a critical role in protecting Frodo and destroying the One Ring.</p>  
         </section>
         <section>
-            <a href="images/characters/galadriel.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Lady Galadriel</h3>
+            <a class="button" href="images/characters/galadriel.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/galadriel.jpeg" alt="The fair Lady Galadriel with a bright face">
             <p>Galadriel was the Lady of the woods of Lothlórien, which she ruled with Celeborn, her husband. 
                 One of the greatest Elves in Middle-earth, she surpassed nearly all others in beauty, knowledge, and power. 
@@ -59,33 +64,38 @@
                 Galadriel was a niece of Fëanor, the most important Elf of the early First Age.</p>  
         </section>
         <section>
-            <a href="images/characters/smeagol.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Smeagol</h3>
+            <a class="button" href="images/characters/smeagol.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/smeagol.jpeg" alt="Smeagol doubting where his loyalty lies">
             <p>By possessing the One Ring, his life extended centuries beyond his nature, and he became deformed and twisted in body and mind by the corruption of the Ring. 
                 He pursued the Ring for many years after Bilbo Baggins found it in Gollum's cave, within the Misty Mountains, and took it away. Inadvertently, Gollum would play a vital role in the ultimate 
                 Quest of the Ring. The name Gollum was derived from the sound of his gurgling, choking cough.</p>  
         </section>
         <section>
-            <a href="images/characters/merrynpippin.png" target="_blank">Get a closer look</a></li>
-            <img src="images/characters/merrynpippin.png" alt="Merry and Pippin looking towards the east in a dark forest">
+            <h3>Merry & Pippin</h3>
+            <a class="button" href="images/characters/merrynpippin.jpg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/merrynpippin.jpg" alt="Merry and Pippin looking towards the east in a dark forest">
             <p>Merry Brandybuck was a Hobbit of the Shire and one of Frodo Baggins cousins and closest friends. 
                 He loved boats and ponies and had a great interest in the maps of Middle-earth. 
                 He was also one of the nine companions of the Fellowship of the Ring. Peregrin Took, more commonly known as Pippin, was a hobbit of the the Shire, and one of Frodo Baggins' youngest and closest friends. 
                 He was a member of the Fellowship of the Ring and, after the War of the Ring, became thirty-second Thain of the Shire.</p>
         </section>
         <section>
-            <a href="images/characters/eowyn.jpeg" target="_blank">Get a closer look</a></li>
-            <img src="images/characters/eowyn.jpeg" alt="Eowyn saying her goodbyes to a good friends">
+            <h3>Eowyn</h3>
+            <a class="button" href="images/characters/eowyn.jpg" target="_blank">Get a closer look</a></li>
+            <img src="images/characters/eowyn.jpg" alt="Eowyn saying her goodbyes to a good friends">
             <p>Éowyn was a shieldmaiden of Rohan, daughter of Éomund and Théodwyn, younger sister of Éomer and niece of King Théoden.</p>  
         </section>
         <section>
-            <a href="images/characters/legolas.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Legolas</h3>
+            <a class="button" href="images/characters/legolas.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/legolas.jpeg" alt="Legolas looking down a steep cliff">
             <p>Legolas was a Sindar Elf who joined the Fellowship of the Ring in the Third Age. Son of the Elvenking Thranduil of Mirkwood, Legolas was Mirkwood's prince, a messenger, and a master archer. 
                 With his keen eyesight, sensitive hearing, and excellent bowmanship, Legolas was valuable to the Fellowship in their journey across Middle-earth. 
                 He was well-known for becoming friends with the Dwarf Gimli, despite their long-held differences.</p>  
         </section>
         <section>
+            <h3>Gimli</h3>
             <a class="button" href="images/characters/gimli.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/gimli.jpeg" alt="Gimli in warm light smiling">
             <p>Gimli, son of Glóin, was a Dwarf of the House of Durin and a member of the Fellowship of the Ring. 
@@ -93,25 +103,29 @@
                 the War of the Ring against Sauron at the end of the Third Age.</p>  
         </section>
         <section>
-            <a href="images/characters/theoden.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Theoden</h3>
+            <a class="button" href="images/characters/theoden.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/theoden.jpeg" alt="Theoden mourning his son by the grave">
             <p>Théoden, son of Thengel and Morwen Steelsheen, was the seventeenth King of Rohan, 
                 last of the Second Line of the royal House of Eorl.</p>  
         </section>
         <section>
-            <a href="images/characters/arwen.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Arwen</h3>
+            <a class="button" href="images/characters/arwen.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/arwen.jpeg" alt="Arwen coming to aid the company from the forest">
             <p>Arwen was the Half-elven daughter of Elrond and Celebrían. 
                 She was often called Arwen Undómiel or Evenstar</p> 
         </section>
         <section>
-            <a href="images/characters/elrond.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Elrond</h3>
+            <a class="button" href="images/characters/elrond.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/elrond.jpeg" alt="Image of Elrond among his army of Elves ready for battle">
             <p>Elrond Sindarin: Star-dome Half-elf, Lord of Rivendell, was a mighty Elf-ruler of old who dwelt in Middle-earth from 
                 the First Age to the beginning of the Fourth Age. He was the father of Elladan and Elrohir and Arwen Undómiel, the eventual wife of Aragorn II Elessar.</p>  
         </section>
         <section>
-            <a href="images/characters/saruman.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Saruman</h3>
+            <a class="button" href="images/characters/saruman.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/saruman.jpeg" alt="Evil wizard with a crystal ball">
             <p>Saruman, also known as Saruman the White, was first of the Istari (Wizards), the emissaries of the 
                 Valar sent to Middle-earth in the Third Age to help in countering the returned Sauron. He was originally the order's chief, and was head of the 
@@ -121,21 +135,24 @@
                 Isengard to both conquer Rohan on Sauron's behalf and try to seize the One Ring first without his knowledge.</p>  
         </section>
         <section>
-            <a href="images/characters/sauron.jpeg" target="_blank">Get a closer look</a></li>                
+            <h3>Sauron</h3>
+            <a class="button" href="images/characters/sauron.jpeg" target="_blank">Get a closer look</a></li>                
             <img class="character" src="images/characters/sauron.jpeg" sizes="50%" alt="The evil Eye of Sauron">
             <p>Sauron Quenya, the eponymous Lord of the Rings, was the greatest subversive Maia, maker of the One Ring, 
                 renowned disciple of the Vala Aulë, and chief agent of Morgoth in the Elder Days. After Morgoth's ousting by the Valar, 
                 Sauron became the second Dark Lord and sought to conquer Middle-earth, and even Númenor, through guileful trickery, with the Rings of Power or with overwhelming legions.</p>  
         </section> 
         <section>
-            <a href="images/characters/boromir.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Boromir</h3>
+            <a class="button" href="images/characters/boromir.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/boromir.jpeg" alt="'You cant simply walk into Mordor'">
             <p>Boromir was a valiant warrior of Gondor, renowned for his prowess in combat and skill on the battlefield. 
                 He was the eldest son of Denethor II, who was Steward of Gondor during the War of the Ring, and his wife Finduilas. 
                 Even the people of Rohan admired him, particularly Éomer. He was the older brother of Faramir.</p>            
         </section>
         <section>
-            <a href="images/characters/faramir.jpeg" target="_blank">Get a closer look</a></li>
+            <h3>Faramir</h3>
+            <a class="button" href="images/characters/faramir.jpeg" target="_blank">Get a closer look</a></li>
             <img src="images/characters/faramir.jpeg" alt="Faramir pondering how long this has to go on">
             <p>Faramir was the second son of Denethor II and younger brother of Boromir. 
                 He was Captain of the Rangers of Ithilien and Captain of the White Tower.</p>            
