--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </h2>   
         </section>
         <h2><a href="https://youtu.be/dQw4w9WgXcQ?si=jooM4JxKJk-wUj5I">Click Here for more Lord of The Rings facts!</a></h2>
-        <audio autoplay="true" src="music/the_shire.mp3"></audio>
+        <audio autoplay src="music/the_shire.mp3"> Welcome on the Wiki</audio>
     </main>
     <footer>
         <p>unofficial website for your favorite 00's movie</p> 
