--- a/shop.html
+++ b/shop.html
@@ -21,14 +21,14 @@
         <h1>Webshop</h1>
         <section>
             <h3>Doormat</h3>
-                <img class="image" src="images/merch/doormat.png">
+                <img class="image" alt="doormat, super nice" src="images/merch/doormat.png">
                 <p>A super cool doormat, a real woman magnet. Made for getting the 
                     shit of your boots after a long day of walking through middle earth.
                     <a href="https://amzn.eu/d/52XWdXl" target="_blank">Buy it Here!</a></p>
         </section>
         <section>
             <h3>Phone Case</h3>
-                <img class="image" src="images/merch/phonecase.png">
+                <img class="image" alt="phone case with map on it" src="images/merch/phonecase.png">
                 <p>Everyone in Middle-Earth has a smartphone! And you know what is 
                     even better than a potion that boosts you fighting spirit? Yes! thats right, 
                     a sturdy phone case that's got your back whilst you are fighting the Uruks.
@@ -37,7 +37,7 @@
         </section>
         <section>
             <h3>Poster</h3>
-                <img class="image" src="images/merch/poster.png">
+                <img class="image" alt="a signed poster" src="images/merch/poster.png">
                 <p>The prancing pony has one, the white counsel has one, there is even one in Bag-End! 
                     Get your beautiful signed Lord of The Rings poster now!
                     <a href="https://www.ebay.com/itm/325276574945?mkcid=16&mkevt=1&mkrid=711-127632-2357-0&ssspo=JWko-29ISwm&sssrc=2047675&ssuid=&widget_ver=artemis&media=COPY" 
